# sluggrs

./: .gitignore  .review.toml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-ZLIB  LLM.md  README.md  TODO.md  brokkr.toml  slug-font-rendering.md  slug-glyph-design.md  slug-glyph-investigation.md
.brokkr/: results.db
docs/: emoji-fallback-spec.md  integration-spec.md  known-artifacts.md  slug-font-rendering.md  slug-glyph-design.md  slug-glyph-investigation.md
examples/: demo.rs  demo2.rs  email2_bench.rs  email_bench.rs  gpu_bench.rs  hotpath.rs
examples/emoji_test/: Cargo.toml
examples/emoji_test/src/: main.rs
slug-glyph-proto/: Cargo.toml
slug-glyph-proto/src/: band.rs  main.rs  outline.rs  simple_shader.wgsl
src/: band.rs  glyph_cache.rs  gpu_cache.rs  lib.rs  outline.rs  prep.rs  prepare.rs  raster_text.rs  raster_text.wgsl  shader.wgsl  simple_shader.wgsl  text_atlas.rs  text_renderer.rs  types.rs  viewport.rs
tests/: atlas_lifecycle_test.rs  debug_bold_r.rs  font_access_spike.rs  glyph_key_and_fallback_test.rs  glyph_pipeline_test.rs  outline_edge_cases_test.rs  prepare_behavior_test.rs  variable_font_test.rs
