[package]
name = "sluggrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0 OR Zlib"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath", "hotpath/hotpath-alloc"]

[dependencies]
cosmic-text = "0.18"
wgpu = "28"
skrifa = "0.40"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
hotpath = "0.14"

[dev-dependencies]
winit = "0.30"
pollster = "0.4"
env_logger = "0.11"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "hotpath"
path = "examples/hotpath.rs"

[[example]]
name = "gpu-bench"
path = "examples/gpu_bench.rs"

[lints.clippy]
# Style: modern idiomatic Rust
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"

# Safety: strict error handling
unwrap_in_result = "deny"
ok_expect = "deny"
unwrap_used = "deny"

# Async safety
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

# Type safety (excluding cast_* and float_cmp — speed at all costs)
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"

# Safety: no debug/placeholder code in production
dbg_macro = "deny"
todo = "deny"
